# pymdea

./: .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  __init__.py  dea.ipynb  dea.py  dea_class.py  dea_demo.ipynb  getting-started.ipynb  index.html  mkdocs.yml  notebook.ipynb  objects.inv  pyproject.toml  zensical.toml
.github/: CONTRIBUTING.md  pull_request_template.md
.github/workflows/: docs.yml  mkdocs.yml  pylint.yml  pytest.yml
api-reference/core/: index.html
api-reference/plot/: index.html
dea/: core.py  util.py
docs/: index.md
docs/api-reference/: core.md  plot.md
docs/javascripts/: mathjax.js
docs/user-guide/: further-reading.md  getting-started.ipynb  getting-started.md  interpreting.md  tuning.md
javascripts/: mathjax.js
search/: search_index.json
src/dea/: __init__.py  plot.py
src/pymdea/: core.py  plot.py
tests/: test_core.py  test_plot.py
user-guide/further-reading/: index.html
user-guide/getting-started/: index.html
user-guide/interpreting/: index.html
user-guide/tuning/: index.html
