[project]
name = "pymdea"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typing>=3.10.0.0",
    "tqdm>=4.66.5",
    "numpy>=2.1.0",
    "polars>=1.5.0",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "scipy>=1.14.1",
    "logging>=0.4.9.6",
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
